Añadir gestión de lotes de productos
Se ha añadido el servicio `ILoteProductoService` al contenedor de dependencias en `Program.cs` para gestionar lotes de productos. En `NavMenu.razor`, se ha actualizado el nombre del sistema y se han añadido iconos para "Clientes" y "Productos", además de un enlace deshabilitado para "Facturas". Se han añadido estilos en `NavMenu.razor.css` para los nuevos iconos y enlaces deshabilitados.

En `Home.razor`, se ha rediseñado la página de inicio con un nuevo "Hero" y tarjetas de acceso rápido. Se ha añadido la entidad `LoteProducto` en `AppDbContext.cs` y se ha creado una tabla mediante una migración. Se ha implementado el controlador `LotesController` para operaciones CRUD de lotes de productos.

Se ha definido la interfaz `ILoteProductoService` y el DTO `CreateLoteProducto`. Se ha desarrollado el servicio `LoteProductoService` que implementa la lógica de negocio para añadir y recuperar lotes, validando la existencia del producto asociado y actualizando el stock.

--- a/SistemaFacturacionSRI.BlazorApp/Components/Layout/NavMenu.razor.css
+++ b/SistemaFacturacionSRI.BlazorApp/Components/Layout/NavMenu.razor.css
@@ -11,9 +11,9 @@
     background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") no-repeat center/1.75rem rgba(255, 255, 255, 0.1);
 }
 
-.navbar-toggler:checked {
-    background-color: rgba(255, 255, 255, 0.5);
-}
+    .navbar-toggler:checked {
+        background-color: rgba(255, 255, 255, 0.5);
+    }
 
 .top-row {
     height: 3.5rem;
@@ -38,13 +38,21 @@
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-house-door-fill' viewBox='0 0 16 16'%3E%3Cpath d='M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z'/%3E%3C/svg%3E");
 }
 
-.bi-plus-square-fill-nav-menu {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-plus-square-fill' viewBox='0 0 16 16'%3E%3Cpath d='M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0z'/%3E%3C/svg%3E");
+/* --- NUEVOS ICONOS AÑADIDOS --- */
+
+.bi-people-fill-nav-menu {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-people-fill' viewBox='0 0 16 16'%3E%3Cpath d='M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5'/%3E%3C/svg%3E");
 }
 
-.bi-list-nested-nav-menu {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-list-nested' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M4.5 11.5A.5.5 0 0 1 5 11h10a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zm-2-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm-2-4A.5.5 0 0 1 1 3h10a.5.5 0 0 1 0 1H1a.5.5 0 0 1-.5-.5z'/%3E%3C/svg%3E");
+.bi-box-seam-fill-nav-menu {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-box-seam-fill' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M15.528 2.973a.5.5 0 0 1 .472.472v10.11a.5.5 0 0 1-.472.472l-1.928.514a.5.5 0 0 1-.546-.117L8 8.183l-5.024 5.239a.5.5 0 0 1-.546.117L.5.5 0 0 1 0-.5V3.445a.5.5 0 0 1 .472-.472L2.4 2.456a.5.5 0 0 1 .546.117L8 7.817l5.024-5.24a.5.5 0 0 1 .546-.117zM8 7.183 2.976 1.944a.5.5 0 0 1 .546-.117L5.45 2.34l2.55 2.55zm0 0 5.024-5.239a.5.5 0 0 1 .546.117L15.5 2.34l-2.55 2.55zM1 3.817v8.76l1.528-.407a.5.5 0 0 1 .546.117L8 13.817l4.926-5.148a.5.5 0 0 1 .546-.117L15 9.073V3.817L9.976 9.056a.5.5 0 0 1-.546-.117z'/%3E%3C/svg%3E");
 }
+
+.bi-document-text-fill-nav-menu {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-document-text-fill' viewBox='0 0 16 16'%3E%3Cpath d='M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2M.5 9.5A.5.5 0 0 1 1 9h5a.5.5 0 0 1 0 1H1a.5.5 0 0 1-.5-.5m0-2A.5.5 0 0 1 1 7h5a.5.5 0 0 1 0 1H1a.5.5 0 0 1-.5-.5m0-2A.5.5 0 0 1 1 5h5a.5.5 0 0 1 0 1H1a.5.5 0 0 1-.5-.5'/%3E%3C/svg%3E");
+}
+
+/* --- FIN DE NUEVOS ICONOS --- */
 
 .nav-item {
     font-size: 0.9rem;
@@ -71,15 +79,26 @@
         width: 100%;
     }
 
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.37);
-    color: white;
-}
+    .nav-item ::deep a.active {
+        background-color: rgba(255,255,255,0.37);
+        color: white;
+    }
 
-.nav-item ::deep .nav-link:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
+    .nav-item ::deep .nav-link:hover {
+        background-color: rgba(255,255,255,0.1);
+        color: white;
+    }
+
+    /* NUEVO: Estilo para enlaces deshabilitados */
+    .nav-item ::deep .nav-link.disabled {
+        color: #d7d7d760; /* Color del link pero con 60% opacidad */
+        cursor: not-allowed;
+    }
+
+        .nav-item ::deep .nav-link.disabled:hover {
+            background-color: transparent; /* Evita el hover en deshabilitados */
+        }
+
 
 .nav-scrollable {
     display: none;
@@ -97,7 +116,6 @@
     .nav-scrollable {
         /* Never collapse the sidebar for wide screens */
         display: block;
-
         /* Allow sidebar to scroll for tall menus */
         height: calc(100vh - 3.5rem);
         overflow-y: auto;
