--- a/SistemaFacturacionSRI.BlazorApp/Components/Layout/NavMenu.razor
+++ b/SistemaFacturacionSRI.BlazorApp/Components/Layout/NavMenu.razor
@@ -74,6 +74,16 @@
             </Authorized>
         </AuthorizeView>
 
+        <AuthorizeView Roles="Administrador">
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="configuracion">
+                        <span class="bi bi-gear-fill-nav-menu" aria-hidden="true"></span> Firma Electrónica
+                    </NavLink>
+                </div>
+            </Authorized>
+        </AuthorizeView>
+
         <div class="nav-item px-3 mt-2">
             <AuthorizeView>
                 <Authorized>
